guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      topologySpreadConstraints:
       - labelSelector:
           matchLabels:
             app: guestbook-ui
         maxSkew: 1
         topologyKey: karpenter.sh/capacity-type
         whenUnsatisfiable: DoNotSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nodepool
                operator: In
                values:
                - karpenter-x86-64
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: karpenter.sh/capacity-type
                operator: In
                values:
                - on-demand
          - weight: 90
            preference:
              matchExpressions:
              - key: karpenter.sh/capacity-type
                operator: In
                values:
                - spot
#      tolerations:
#      - key: architecture
#        operator: Equal
#        value: x86-64
#        effect: NoSchedule
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "600Mi"
            cpu: "1000m"
          limits:
            memory: "900Mi"
            cpu: "1500m"
